# InventorySystem_Agent

./: AGENTS.md  README.md  pyproject.toml
app/: config.py  main.py
app/agent/: agent.py  schemas.py  tools.py
app/api/v1/agent/: controller.py  route.py  schemas.py
app/mcp/: mcp_client.py
app/mcp/servers/: mcp_server_sql.py
app/mcp_custom/: mcp_client.py  schemas.py
